--- a/backend/package.json
+++ b/backend/package.json
@@ -1,23 +1,28 @@
 {
-	"name": "backend",
-	"version": "1.0.0",
-	"main": "index.js",
-	"scripts": {
-		"compile": "tsc",
-		"start": "npm run compile && node ./dist/index.js"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"description": "",
-	"type": "module",
-	"dependencies": {
-		"@apollo/server": "^5.0.0",
-		"graphql": "^16.11.0",
-		"graphql-tag": "^2.12.6"
-	},
-	"devDependencies": {
-		"@types/node": "^24.1.0",
-		"typescript": "^5.9.2"
-	}
+    "name": "backend",
+    "version": "1.0.0",
+    "main": "index.js",
+    "scripts": {
+        "compile": "tsc",
+        "start": "npm run compile && node ./dist/index.js",
+        "dev": "tsc && node ./dist/index.js",
+        "build": "tsc",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "description": "",
+    "type": "module",
+    "dependencies": {
+        "@apollo/server": "^5.0.0",
+        "express": "^4.18.2",
+        "graphql": "^16.11.0",
+        "graphql-tag": "^2.12.6"
+    },
+    "devDependencies": {
+        "@types/express": "^4.17.21",
+        "@types/node": "^24.1.0",
+        "typescript": "^5.9.2"
+    }
 }
